# SkillBridge-AI2

./: .env.example  .gitignore  INTERVIEW_PREP.md  README.md  SkillBridge_AI_Presentation.pptx  docker-compose.yml  render.yaml
.github/: PULL_REQUEST_TEMPLATE.md
backend/: alembic.ini  pyproject.toml  requirements.txt  skillbridge.db-shm  skillbridge.db-wal  test_analysis.py  test_auth_api.py  test_e2e.py  test_parser.py
backend/alembic/: env.py  script.py.mako
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/ai/: __init__.py  analyzer.py  career_db.json  data_builder.py  gap_detector.py  information_extractor.py  nlp.py  recommender.py  resume_parser.py  scorer.py  section_detector.py  skill_extractor.py
backend/app/ai/data/: careers.json  skills.json
backend/app/api/: __init__.py  router.py
backend/app/api/v1/: __init__.py
backend/app/core/: __init__.py  config.py  exceptions.py  logging.py  security.py
backend/app/dependencies/: __init__.py
backend/app/middleware/: __init__.py  request_id.py  timing.py
backend/app/models/: __init__.py  analysis.py  resume.py  user.py
backend/app/repositories/: __init__.py
backend/app/routers/: __init__.py  auth.py  dashboard.py  resume.py
backend/app/schemas/: __init__.py  analysis.py  common.py  resume.py  user.py
backend/app/services/: __init__.py  auth_service.py  resume_service.py
backend/app/tests/: __init__.py
backend/app/utils/: __init__.py  auth.py
backend/tests/: test_api.py
backend/uploads/: .gitkeep
database/: .gitkeep  init.sql
docker/: backend.Dockerfile  (+1 more)
(+26 files in other folders)
